k8s/django-redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-redis-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis

  template:
    metadata:
      labels:
        components: redis

    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
