k8s/django-app-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-app-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: app

  ports:
    - port: 8990
      targetPort: 8990
