k8s/django-redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-redis-cluster-ip

spec:
  type: ClusterIP

  ports:
    - port: 6379
      targetPort: 6379
  selector:
    component: redis
