k8s/ingress-server.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress 
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: django-app-cluster-ip-service
              servicePort: 8990
